--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "electron-updater": "^2.19.1",
+    "jquery": "^3.3.1",
     "request-promise": "^4.2.2"
   },
   "build": {
